--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+
+
+.idea
